--- a/assets/partials/trackLinks.html
+++ b/assets/partials/trackLinks.html
@@ -1,6 +1,6 @@
 <h3>Activity</h3>
 <div id="{{val[1].media.id}}" ng-repeat="(key, val) in links" class="link">
-    <img ng-src="{{val[1].media.small_image}}">
+    <div class="img" style="background-image:url({{val[1].media.small_image}});"></div>
     <div class="body">
         <h5><a ng-href="#!/{{val[1].media.type}}/{{val[1].media.id}}">{{val[1].media.title}}</a></h5>
         <h6>{{val[1].media.subtitle}}</h6>
