--- a/assets/partials/menu.html
+++ b/assets/partials/menu.html
@@ -1,6 +1,6 @@
 <ul id="nav-mobile" class="grey darken-3 right hide-on-small">
     <li ng-repeat="item in menu">
-        <a ng-href="{{item.url}}">{{item.label}}</a>
+        <a ng-show="{{item.show}}" ng-href="{{item.url}}">{{item.label}}</a>
     </li>
     <li ng-show="!authenticated">
         <a ng-href="https://accounts.spotify.com/authorize?client_id={{key}}&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2F&scope=user-top-read%20user-read-currently-playing&response_type=token">Login</a>
