--- a/assets/partials/playlist.html
+++ b/assets/partials/playlist.html
@@ -6,12 +6,13 @@
     </div>
     <div class="col s12 m8 l6 offset-l1" id="tracklist">
         <h3>Tracks</h3>
-        <ol>
-            <li ng-repeat="track in tracks">
-                <h5>{{track.track.name}}</h5>
-                <h6>{{track.track.artists[0].name}}</h6>
-            </li>
-        </ol>
+        <table class="table">
+            <tr ng-repeat="(index, track) in tracks">
+                <td>{{index+1}}</td>
+                <td>{{track.track.name}}</td>
+                <td>{{track.track.artists[0].name}}</td>
+            </tr>
+        </table>
     </div>
     <div class="col s12 m8 l6 offset-l1" id="profile-links" ng-include="'assets/partials/trackLinks.html'">
     </div>
