--- a/assets/partials/playlist.html
+++ b/assets/partials/playlist.html
@@ -1,10 +1,10 @@
 <div class="row container">
-    <div class="col s12 m4 l5" id="sidebar">
+    <div class="col s12 m4 l4" id="sidebar">
         <img ng-src="{{music.image}}">
         <h1>{{music.title}}</h1>
         <h2>{{music.subtitle}}</h2>
     </div>
-    <div class="col s12 m8 l6 offset-l1" id="tracklist">
+    <div class="col s12 m8 l8" id="tracklist">
         <h3>Tracks</h3>
         <table class="table">
             <tr ng-repeat="(index, track) in tracks">
@@ -14,6 +14,6 @@
             </tr>
         </table>
     </div>
-    <div class="col s12 m8 l6 offset-l1" id="profile-links" ng-include="'assets/partials/trackLinks.html'">
+    <div class="col s12 m8 offset-m2" id="profile-links" ng-include="'assets/partials/trackLinks.html'">
     </div>
 </div>
