edit button is f'nal and ugly

--- a/assets/partials/profileLinks.html
+++ b/assets/partials/profileLinks.html
@@ -10,4 +10,7 @@
             <a ng-href="#!/user/{{link.uid}}" ng-show="context!='profile'" class="author tag">{{link.name}}</a>
         </div>
     </div>
+    <div class="ops">
+        <a ng-href="#!/link/{{link.key}}">Edit</a>
+    </div>
 </div>
