books and tv shows delete buttons are working but ux is a shitshow

--- a/assets/partials/profileLinks.html
+++ b/assets/partials/profileLinks.html
@@ -12,5 +12,6 @@
     </div>
     <div class="ops">
         <a ng-href="#!/link/{{link.key}}">Edit</a>
+        <a ng-click="deleteLink(link.key)">Delete</a>
     </div>
 </div>
