--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -138,7 +138,7 @@ nav {
     text-align: center;
 }
 
-#movies, #tv, #books {
+#recent {
     display: grid;
     grid-gap: 1rem;
     @media screen and (min-width: 601px) {
