--- a/assets/partials/link.html
+++ b/assets/partials/link.html
@@ -105,7 +105,10 @@
                 {{tag}}
             </div>
         </div>
-        <a ng-click="submit()" ng-show="context=='new'" class="button wide big">Post Mix</a>
-        <a ng-click="submit()" ng-show="context=='edit'" class="button wide big">Save Mix</a>
+        <div class="button-row">
+            <a ng-click="cancel()" class="button wide big muted">Cancel</a>
+            <a ng-click="submit()" ng-show="context=='new'" class="button wide big">Post Mix</a>
+            <a ng-click="submit()" ng-show="context=='edit'" class="button wide big">Save Mix</a>
+        </div>
     </div>
 </div>
