update sampe data, push constants, change homepage images to large ones

--- a/assets/partials/home.html
+++ b/assets/partials/home.html
@@ -3,7 +3,7 @@
         <h3>Recent Mixes</h3>
         <div id="recent">
             <div ng-repeat="link in links" class="media">
-                <a ng-href="#!/{{link.media.type}}/{{link.media.id}}" style="background-image: url({{link.media.small_image}});">
+                <a ng-href="#!/{{link.media.type}}/{{link.media.id}}" style="background-image: url({{link.media.image}});">
                 </a>
             </div>
         </div>
