--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -208,7 +208,7 @@ nav {
                 margin-bottom: -.5em;
             }
         }
-        .ops {
+        .ops, .votes {
             display: flex;
             flex-direction: column;
             justify-content: center;
