broadcasting users all over the place

--- a/assets/partials/menu.html
+++ b/assets/partials/menu.html
@@ -2,10 +2,10 @@
     <li ng-repeat="item in menu">
         <a ng-show="{{item.show}}" ng-href="{{item.url}}">{{item.label}}</a>
     </li>
-    <li ng-show="!authenticated">
+    <li ng-show="!user">
         <a ng-href="https://accounts.spotify.com/authorize?client_id={{key}}&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2F&scope=user-top-read%20user-read-currently-playing&response_type=token">Login</a>
     </li>
-    <li ng-show="authenticated">
+    <li ng-show="user">
         <a ng-click="logout()">Logout</a>
     </li>
 </ul>
