playlist page now displays owner not active user

--- a/assets/partials/playlist.html
+++ b/assets/partials/playlist.html
@@ -2,7 +2,7 @@
     <div class="col s12 m4 l4" id="sidebar">
         <img ng-src="{{music.image}}">
         <h1>{{music.title}}</h1>
-        <h2>by <a ng-href="#!/user/{{user.id}}">{{user.display_name}}</a></h2>
+        <h2>by <a ng-href="#!/user/{{user.id}}">{{owner.display_name}}</a></h2>
     </div>
     <div class="col s12 m8 l8" id="tracklist">
         <h3>Tracks</h3>
