--- a/assets/partials/home.html
+++ b/assets/partials/home.html
@@ -2,10 +2,10 @@
     <div class="col s6 m8 l9">
         <h3>Recent Mixes</h3>
         <div id="recent">
-            <!-- <div ng-repeat="link in links" class="media">
+            <div ng-repeat="link in links" class="media">
                 <a ng-href="#!/{{link.media.type}}/{{link.media.id}}" style="background-image: url({{link.media.image}});">
                 </a>
-            </div> -->
+            </div>
         </div>
     </div>
     <div class="col s6 m4 l3" id="sidebar">
