--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -179,10 +179,23 @@ nav {
 }
 
 #profile-links, #mediaSearchResults, #musicSearchResults {
+    .play.btn {
+        transition: .25s;
+        opacity: 0;
+        background: $green;
+        margin-left: -1.4rem;
+        // position: absolute;
+        align-self: center;
+    }
+    &:hover {
+        .play.btn {
+            opacity: 1;
+        }
+    }
     .link, .search-result {
         display: grid;
         margin-bottom: 1em;
-        grid-template-columns: 5rem 1fr 3rem;
+        grid-template-columns: 0px 5rem 1fr 3rem;
         background: $g3;
         .img {
             padding: 50%;
@@ -240,7 +253,7 @@ nav {
 }
 #mediaSearchResults {
     .search-result, .links {
-        grid-template-columns: 4rem 1fr 3rem;
+        grid-template-columns: 0px 4rem 1fr 3rem;
     }
     .link {
         .img {
@@ -250,9 +263,9 @@ nav {
 }
 #profile-links {
     .link {
-        grid-template-columns: 9rem 1fr 3rem;
+        grid-template-columns: 0px 9rem 1fr 3rem;
         &.track {
-            grid-template-columns: 6rem 1fr 3rem;
+            grid-template-columns: 0px 6rem 1fr 3rem;
             .img {
                 padding: 80% 0;
             }
