--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -178,7 +178,7 @@ nav {
     }
 }
 
-#profile-links, #mediaSearchResults, #musicSearchResults {
+#profile-links, #track-links, #mediaSearchResults, #musicSearchResults {
     .play.btn {
         transition: .25s;
         opacity: 0;
@@ -265,7 +265,7 @@ nav {
     .link {
         grid-template-columns: 0px 9rem 1fr 3rem;
         &.track {
-            grid-template-columns: 0px 6rem 1fr 3rem;
+            grid-template-columns: 6rem 1fr 3rem;
             .img {
                 padding: 80% 0;
             }
