play button on playlist page works

--- a/assets/partials/playlist.html
+++ b/assets/partials/playlist.html
@@ -1,7 +1,10 @@
 <div class="row container">
     <div class="col s12 m4 l4" id="sidebar">
         <img ng-src="{{music.image}}">
-        <h1>{{music.title}}</h1>
+        <h1>
+            <a ng-click="playPlaylist(owner.id, music.id)" class="btn-floating btn waves-effect waves-light play"><i class="material-icons">play_arrow</i></a>
+            {{music.title}}
+        </h1>
         <h2>by <a ng-href="#!/user/{{user.id}}">{{owner.display_name}}</a></h2>
     </div>
     <div class="col s12 m8 l8" id="tracklist">
