--- a/assets/partials/track.html
+++ b/assets/partials/track.html
@@ -7,6 +7,10 @@
         </h1>
         <h2>{{music.subtitle}}</h2>
     </div>
-    <div class="col s12 m8 l6 offset-l1" id="profile-links" ng-include="'assets/partials/trackLinks.html'">
+    <div class="col s12 m8 l6 offset-l1">
+        <h3 ng-show="lyrics">Lyrics</h3>
+        {{lyrics}}
+        <div id="profile-links" ng-include="'assets/partials/trackLinks.html'">
+        </div>
     </div>
 </div>
