--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -266,12 +266,17 @@ nav {
 }
 #mediaSearchResults {
     .search-result, .links {
-        grid-template-columns: 0px 4rem 1fr 3rem;
+        grid-template-columns: 4rem 1fr 3rem;
     }
     .link {
         .img {
             padding: 70% 0;
         }
+    }
+}
+#musicSearchResults {
+    .search-result, .link {
+        grid-template-columns: 5rem 1fr 3rem;
     }
 }
 #profile-links {
