--- a/assets/partials/track.html
+++ b/assets/partials/track.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col s12 m8 l6 offset-l1">
         <h3 ng-show="lyrics">Lyrics</h3>
-        {{lyrics}}
+        <pre>{{lyrics}}</pre>
         <div id="profile-links" ng-include="'assets/partials/trackLinks.html'">
         </div>
     </div>
