--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -42,6 +42,13 @@ main {
         height: 100%;
     }
 }
+pre {
+    white-space: pre-wrap;
+    color: $w3;
+    font-family: "Source Code Pro";
+    font-size: 1.1rem;
+    letter-spacing: -.5px;
+}
 .big {
     font-size: 1.2em;
 }
