cursor poitner to some of the collapse elements, collapse lyric excerpt

--- a/assets/partials/track.html
+++ b/assets/partials/track.html
@@ -8,9 +8,15 @@
         <h2>{{music.subtitle}}</h2>
     </div>
     <div class="col s12 m8 l6 offset-l1" ng-init="showExcerpt=true">
-        <h3 ng-click="showExcerpt = !showExcerpt" ng-show="lyrics">Lyrics</h3>
-        <pre ng-show="showExcerpt">{{excerpt}}</pre>
-        <pre ng-show="!showExcerpt">{{lyrics}}</pre>
+        <div class="lyrics" ng-show="lyrics">
+            <h3 ng-click="showExcerpt = !showExcerpt">
+                Lyrics
+                <i ng-show="showExcerpt" class="material-icons">keyboard_arrow_down</i>
+                <i ng-show="!showExcerpt" class="material-icons">keyboard_arrow_up</i>
+            </h3>
+            <pre ng-click="showExcerpt = !showExcerpt" ng-show="showExcerpt">{{excerpt}}</pre>
+            <pre ng-click="showExcerpt = !showExcerpt" ng-show="!showExcerpt">{{lyrics}}</pre>
+        </div>
         <div id="profile-links" ng-include="'assets/partials/trackLinks.html'">
         </div>
     </div>
