--- a/assets/partials/home.html
+++ b/assets/partials/home.html
@@ -9,6 +9,6 @@
         </div>
     </div>
     <div class="col s6 m4 l3" id="sidebar">
-        <div id="user" ng-include="'/assets/partials/user.html'" ng-controller="UserCtrl"></div>
+        <div id="user" ng-include="'assets/partials/user.html'" ng-controller="UserCtrl"></div>
     </div>
 </div>
