--- a/assets/partials/linkCard.html
+++ b/assets/partials/linkCard.html
@@ -1,4 +1,5 @@
 <h3>Activity</h3>
+<img class="ldg" src="assets/img/ldg.svg" ng-class="{'active': !links}">
 <div id="{{link.music.id}}" ng-repeat="link in links" class="link">
     <a ng-click="play(link.music.ownerId, link.music)" class="btn-floating btn waves-effect waves-light play"><i class="material-icons">play_arrow</i></a>
     <div class="img" style="background-image:url({{link.music.small_image}});"></div>
