--- a/assets/partials/trackLinks.html
+++ b/assets/partials/trackLinks.html
@@ -1,4 +1,5 @@
 <h3>Activity</h3>
+<img class="ldg" src="assets/img/ldg.svg" ng-class="{'active': !links}">
 <div id="{{link.media.id}}" ng-repeat="link in links" class="link track">
     <div class="img" style="background-image:url({{link.media.small_image}});"></div>
     <div class="body">
