--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -86,6 +86,14 @@ a.button {
     vertical-align: middle;
     margin-left: .5em;
 }
+img.ldg {
+    transition: .25s;
+    margin: 3rem auto;
+    display: none;
+    &.active {
+        display: block;
+    }
+}
 
 i.material-icons {
     &.md-36 {
