--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,13 @@ a.button {
   vertical-align: middle;
   margin-left: .5em; }
 
+img.ldg {
+  transition: .25s;
+  margin: 3rem auto;
+  display: none; }
+  img.ldg.active {
+    display: block; }
+
 i.material-icons.md-36 {
   font-size: 36px !important; }
 i.material-icons.md-48 {
