--- a/assets/partials/mix.html
+++ b/assets/partials/mix.html
@@ -59,7 +59,7 @@
     </div>
     <div ng-init="musicLoading=false" class="col s12 m6">
         <div class="input-field">
-            <input ng-model="musicSearchTerm" type="text">
+            <input ng-model="musicSearchTerm" type="text" ng-enter="searchMusic()">
             <label for="musicSearchTerm">Search music</label>
         </div>
         <div id="music-choices" ng-init="activeMusic=false" ng-click="musicResults=[]">
