displays current vote count

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -262,7 +262,8 @@ nav {
             justify-content: center;
             align-items: stretch;
             background: $green;
-            color: $w1;
+            color: $w3;
+            text-align: center;
             a {
                 text-align: center;
                 padding: .25rem;
