--- a/assets/partials/trackLinks.html
+++ b/assets/partials/trackLinks.html
@@ -22,6 +22,7 @@
         <a ng-click="upvote(link.key)" ng-class="{'active': link.vote == 1}">
             <i class="material-icons">thumb_up</i>
         </a>
+        {{link.score}}
         <a ng-click="downvote(link.key)" ng-class="{'active': link.vote == -1}">
             <i class="material-icons">thumb_down</i>
         </a>
