now user can see votes on their own mixes

--- a/assets/partials/linkCard.html
+++ b/assets/partials/linkCard.html
@@ -16,6 +16,7 @@
         <a ng-href="#!/link/{{link.key}}">
             <i class="material-icons">edit</i>
         </a>
+        {{link.score}}
         <a ng-click="deleteLink(link.key)">
             <i class="material-icons">clear</i>
         </a>
