--- a/assets/partials/media.html
+++ b/assets/partials/media.html
@@ -3,7 +3,7 @@
         <img ng-src="{{media.image}}">
         <h1>
             {{media.title}}
-            <i ng-click="subscribe(media.type, media.id)" ng-show="!subscription" class="sub material-icons">star_border</i>
+            <i ng-click="subscribe()" ng-show="!subscription" class="sub material-icons">star_border</i>
             <i ng-click="unsubscribe(subscription.key)" ng-show="subscription" class="sub material-icons">star</i>
         </h1>
         <h2>{{media.subtitle}}</h2>
